--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.fonts.google.com/specimen/Inter');
+/* Reemplaza el @import anterior por este */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
 body {
     font-family: 'Inter', sans-serif;
     background-color: #f3f4f6;
